rnsc/tests/snapshots/error-parser-outside_class_directive-before_class_dir-dot_end.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method_end ; trailing comment
.class public HelloWorld
.super java/lang/Object
----- STDERR -----
[E-008] Error: unexpected directive before class definition
   ╭─[ test_data/rns_integration/error/parser/outside_class_directive/before_class_dir/dot_end.rns:1:1 ]
   │
 1 │ .method_end ; trailing comment
   │ ─────┬─────  
   │      ╰─────── valid context for .method_end directive is: 'method body'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- JAVAP -----
not generated
